deploy/base/deploy-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crusher-server
  namespace: crusher
  labels:
    app: crusher
    component: server
spec:
  selector:
    matchLabels:
      app: crusher
      component: server
  replicas: 1
  template:
    metadata:
      labels:
        app: crusher
        component: server
    spec:
      terminationGracePeriodSeconds: 5
      volumes:
        - name: crusher-database
          persistentVolumeClaim:
            claimName: crusher-database
      containers:
        - image: koobz/crusher-server:alpha
          imagePullPolicy: Always
          name: crusher-server
          volumeMounts:
          - mountPath: "/data"
            name: crusher-database
