deploy/base/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: crusher
---
apiVersion: v1
kind: Service
metadata:
  name: crusher-server
  namespace: crusher
  labels:
    app: crusher
    component: server
spec:
  type: ClusterIP
  selector:
    app: crusher
    component: server
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crusher-server
  namespace: crusher
  labels:
    app: crusher
    component: server
spec:
  selector:
    matchLabels:
      app: crusher
      component: server
  replicas: 1
  template:
    metadata:
      labels:
        app: crusher
        component: server
    spec:
      terminationGracePeriodSeconds: 5
      volumes:
        - name: crusher-database
          persistentVolumeClaim:
            claimName: crusher-database
      containers:
        - image: koobz/crusher-server:alpha
          imagePullPolicy: Always
          name: crusher-server
          volumeMounts:
          - mountPath: "/data"
            name: crusher-database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crusher-worker
  namespace: crusher
  labels:
    app: crusher
    component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crusher
      component: worker
  template:
    metadata:
      labels:
        app: crusher
        component: worker
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - image: koobz/crusher-worker:alpha
          name: crusher-worker
          imagePullPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crusher
  namespace: crusher
spec:
  tls:
  - hosts:
    - crusher.k8s.koobz.io
    secretName: crusher-tls
  rules:
  - host: crusher.k8s.koobz.io
    http:
      paths:
      - backend:
          serviceName: crusher-server
          servicePort: 5000
